<resources>
    <string name="app_name">Github repo search</string>

    //Dialogs
    <string name="tv_stars">Stars</string>
    <string name="tv_forks">Forks</string>
    <string name="tv_updated">Updated</string>
    <string name="title_sort_by">SORT RESULTS BY:</string>

    //TextViews
    <string name="tv_noQueryFound">No Github repositories found. Please search again.</string>
    <string name="tv_join">Join at Github:</string>
    <string name="tv_email">Email:</string>
    <string name="tv_email_user">Company:</string>
    <string name="tv_public_repos">Public repos:</string>
    <string name="tv_followers">Followers:</string>
    <string name="tv_language">Language:</string>
    <string name="tv_created">Created:</string>
    <string name="tv_title_updated">Updated:</string>
    <string name="tv_watchers">Watchers:</string>
    <string name="tv_title_forks">Forks:</string>
    <string name="tv_issues">Issues:</string>
    <string name="tv_owner">Owner:</string>

    //Buttons
    <string name="btn_open_in_external_browser">Open in external browser</string>

    //toolbars
    <string name="tlb_owner">Owner</string>
    <string name="tlb_repo">Repository</string>

</resources>
