<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srlOwner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_detail_fragment.UserDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMainLight"
        tools:context=".ui.user_detail_fragment.UserDetailFragment">

        <View
            android:id="@+id/tlbOwner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_main"
            android:background="@color/backgroundMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_main"
            android:layout_height="@dimen/icon_main"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/tlbOwner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tlb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tlb_owner"
            android:textColor="@color/txtMainLight"
            android:textSize="@dimen/toolbar_txt"
            app:layout_constraintBottom_toBottomOf="@+id/tlbOwner"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civUser"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlbOwner" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/txtMain"
            android:textSize="@dimen/tv_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civUser" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvJoinTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_join"
            android:textColor="@color/txtMain"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

        <TextView
            android:id="@+id/tvJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvJoinTitle"
            app:layout_constraintStart_toEndOf="@+id/tvJoinTitle"
            app:layout_constraintTop_toTopOf="@+id/tvJoinTitle" />

        <TextView
            android:id="@+id/tvEmailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_email"
            android:textColor="@color/txtMain"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJoinTitle" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvEmailTitle"
            app:layout_constraintTop_toTopOf="@+id/tvEmailTitle" />

        <TextView
            android:id="@+id/tvCompanyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_email_user"
            android:textColor="@color/txtMain"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvCompanyTitle"
            app:layout_constraintStart_toEndOf="@+id/tvCompanyTitle"
            app:layout_constraintTop_toTopOf="@+id/tvCompanyTitle" />

        <TextView
            android:id="@+id/tvReposTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_public_repos"
            android:textColor="@color/txtMain"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCompanyTitle" />

        <TextView
            android:id="@+id/tvRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvReposTitle"
            app:layout_constraintStart_toEndOf="@+id/tvReposTitle"
            app:layout_constraintTop_toTopOf="@+id/tvReposTitle" />

        <TextView
            android:id="@+id/tvFollowersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_followers"
            android:textColor="@color/txtMain"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReposTitle" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvFollowersTitle"
            app:layout_constraintStart_toEndOf="@+id/tvFollowersTitle"
            app:layout_constraintTop_toTopOf="@+id/tvFollowersTitle" />

        <Button
            android:id="@+id/btnExternal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn_main_big"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/btn_open_in_external_browser"
            android:textColor="@color/txtMainLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
